# AnalogMeterDigitReconstruction

./: CMakeLists.txt  conanfile.txt  main.cpp
.github/workflows/: cmake-single-platform.yml
src/: ClassAnalogDigitalMeter.cpp  ClassAnalogDigitalMeter.h
tests/: test_watermeter_getvalue.cpp  test_watermeter_helpers.cpp
